@@ -1,0 +1,93 @@
+<?php
+/**
+ * Helper class for phpMyFAQ FAQs
+ *
+ * PHP Version 5.2
+ *
+ * The contents of this file are subject to the Mozilla Public License
+ * Version 1.1 (the "License"); you may not use this file except in
+ * compliance with the License. You may obtain a copy of the License at
+ * http://www.mozilla.org/MPL/
+ *
+ * Software distributed under the License is distributed on an "AS IS"
+ * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
+ * License for the specific language governing rights and limitations
+ * under the License.
+ *
+ * @category  phpMyFAQ
+ * @package   PMF_Helper
+ * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
+ * @copyright 2010 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
+ * @link      http://www.phpmyfaq.de
+ * @since     2010-11-12
+ */
+
+if (!defined('IS_VALID_PHPMYFAQ')) {
+    exit();
+}
+
+/**
+ * PMF_Helper_Faq
+ *
+ * @category  phpMyFAQ
+ * @package   PMF_Helper
+ * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
+ * @copyright 2010 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
+ * @link      http://www.phpmyfaq.de
+ * @since     2010-11-12
+ */
+class PMF_Helper_Faq extends PMF_Helper
+{
+    /**
+     * Instance
+     *
+     * @var PMF_Helper_Search
+     */
+    private static $instance = null;
+
+    /**
+     * Language
+     *
+     * @var PMF_Language
+     */
+    private $language = null;
+
+    /**
+     * Returns the single instance
+     *
+     * @access static
+     * @return PMF_Helper_Search
+     */
+    public static function getInstance()
+    {
+        if (null == self::$instance) {
+            $className = __CLASS__;
+            self::$instance = new $className();
+        }
+        return self::$instance;
+    }
+
+    /**
+     * __clone() Magic method to prevent cloning
+     *
+     * @return void
+     */
+    private function __clone()
+    {
+    }
+
+    /**
+     * @return string
+     */
+    public function renderFacebookLikeButton($url)
+    {
+        if (empty($url)) {
+            return '';
+        }
+                
+        return sprintf('<iframe src="http://www.facebook.com/plugins/like.php?href=%s&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>',
+            urlencode($url));
+    }
+}
