@@ -11,6 +11,7 @@ Version 2.7.0-alpha - 2010-10-
 - dropped support for Internet Explorer 6 (Thorsten)
 - added new HTML5 powered layout and administration backend (Thorsten)
 - added Twitter support (Thorsten, Thomas Zeithaml)
+- added Facebook Like Button support (Thorsten)
 - updated bundled jQuery to version 1.4.2 (Thorsten)
 
 Version 2.6.12 - 2010-
